@@ -162,7 +162,6 @@ A sample config file is below::
 
     [diff]
     diffoscope_arg =
-      --exclude-directory-metadata
       --debug
 
 
@@ -173,19 +172,18 @@ Normally when diffoscope compares directories, it also compares the metadata of
 files in those directories - file permissions, owners, and so on.
 
 However depending on the circumstance, this filesystem-level metadata may or
-may not be intended to be distributed to other systems. For example: for most
-distros' package builders, we don't care about the metadata of the resulting
+may not be intended to be distributed to other systems. For example: (1) for
+most distros' package builders, we don't care about the metadata of the output
 package files; only the file contents will be distributed to other systems. On
-the other hand, when running something like `make install`, we *do* care about
-the metadata, because this is what will be recreated on another system.
+the other hand, (2) when running something like `make install`, we *do* care
+about the metadata, because this is what will be recreated on another system.
 
-In the first case (where only the file contents will be distributed) you should
-pass ``--diffoscope-args=--exclude-directory-metadata`` to reprotest, to tell
-diffoscope to ignore the metadata that will not be distributed. Otherwise, you
-may get a false-negative result on the reproducibility of your build.
-
-This flag is already set in our presets, in the situations where it is
-appropriate to do so.
+In developing reprotest, our experience has been that case (1) is more common
+and so we pass ``--exclude-directory-metadata`` by default to diffoscope. If
+you find that you are using reprotest for case (2) then you should pass
+``--diffoscope-args=--no-exclude-directory-metadata`` to reprotest, to tell
+diffoscope to not ignore the metadata since it will be distributed and should
+therefore be reproducible. Otherwise, you may get a false-positive result.
 
 
 Variations
