@@ -20,7 +20,7 @@ TEST_VARIATIONS = frozenset(VARIATIONS.keys()) - frozenset(REPROTEST_TEST_DONTVA
 
 def check_reproducibility(command, virtual_server, reproducible):
     result = reprotest.check(
-        reprotest.TestArgs.default(command, 'tests', 'artifact'),
+        reprotest.TestArgs.default(command, 'tests', 'artifact', diffoscope_args=[]),
         reprotest.TestbedArgs.default(virtual_server),
         Variations.of(VariationSpec.default(TEST_VARIATIONS)))
     assert result == reproducible
